--- a/osa4/bloglist/package.json
+++ b/osa4/bloglist/package.json
@@ -11,10 +11,12 @@
   "author": "Roosa Huttunen",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.6.1"
   },
