--- a/osa5/bloglist-frontend/package.json
+++ b/osa5/bloglist-frontend/package.json
@@ -43,6 +43,7 @@
     "@testing-library/user-event": "^14.4.3",
     "cypress": "^10.11.0",
     "eslint-plugin-jest": "^27.1.3",
-    "jest-watch-typeahead": "^0.6.5"
+    "jest-watch-typeahead": "^0.6.5",
+    "prettier": "3.0.1"
   }
 }
