--- a/osa5/bloglist-frontend/package.json
+++ b/osa5/bloglist-frontend/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^0.27.2",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^8.1.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,6 +45,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "cypress": "^10.11.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-jest": "^27.1.3",
     "jest-watch-typeahead": "^0.6.5",
     "prettier": "3.0.1"
