--- a/osa8/backend/package.json
+++ b/osa8/backend/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.9.3",
+    "dotenv": "^16.3.1",
     "graphql": "^16.8.1",
+    "mongoose": "^7.6.0",
+    "mongoose-unique-validator": "^4.0.0",
     "nodemon": "^3.0.1"
   }
 }
